Neue PaymentInformations können einer Ausgabe hinzugefügt werden